# IDOStaking

./: README.md
ido/cli/: Cargo.toml
ido/program/: Cargo.toml
ido/program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs  tests.rs
staking/program/: Cargo.toml
staking/program/src/: instruction.rs  lib.rs  processor.rs  tests.rs
staking/program/src/utils/: invoke.rs  program.rs
